update cantacts&skills sections & links

--- a/1resume/index.html
+++ b/1resume/index.html
@@ -135,11 +135,13 @@
           <h3 class="sidebar-title">Contacts</h3>
           <div>
             <span class="contacts-section-type"> C: </span>
-            <a href="tel:+380975562272"> +380 97 556 22 72</a>
+            <a class="white-link" href="tel:+380975562272">
+              +380 97 556 22 72</a
+            >
           </div>
           <div>
             <span class="contacts-section-link"> E: </span>
-            <a href="mailto:ksenia.pidopryhora@gmail.com">
+            <a class="white-link" href="mailto:ksenia.pidopryhora@gmail.com">
               ksenia.pidopryhora@gmail.com
             </a>
           </div>
@@ -152,22 +154,22 @@
               <span class="tech-skills-item-text">HTML5</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">CSS3</span>
+              <span class="tech-skills-item-text">CSS3, SCSS</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">GIT</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">WebPack</span>
+              <span class="tech-skills-item-text">React.js</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">React.js</span>
+              <span class="tech-skills-item-text">Redux</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Node.js</span>
+              <span class="tech-skills-item-text">Bootstrap</span>
             </li>
           </ul>
         </div>
@@ -179,10 +181,10 @@
               <span class="soft-skills-item-text">Scrum</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-item-text">Agile</span>
+              <span class="soft-skills-item-text">Responsive</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-item-text">GTD</span>
+              <span class="soft-skills-item-text">Persistent</span>
             </li>
             <li class="soft-skills-item">
               <span class="soft-skills-item-text">Teamwork</span>
