update work experience&styles

--- a/1resume/index.html
+++ b/1resume/index.html
@@ -60,17 +60,16 @@
           <h3 class="main-content-title">Work experience</h3>
           <!--company 3-->
           <div>
-            <h4>Customer service support</h4>
-            <p>September 2021 - up to now | USA market</p>
+            <h4>Freelance</h4>
+            <p>February 2022 - up to now | Remote</p>
             <ul>
               <li class="tech-skills-item">
                 <span class="text">
-                  Helping customers with booking cleaning services via phone
-                  calls</span
+                  Making fully responsive layout with HTML&SCSS and React</span
                 >
               </li>
               <li class="tech-skills-item">
-                <span class="text"> Answering all client's questions</span>
+                <span class="text"> Learning new things to do better job</span>
               </li>
               <li class="tech-skills-item">
                 <span class="text"> Prepearing reports on the work done</span>
@@ -79,21 +78,19 @@
           </div>
           <!--company 2-->
           <div>
-            <h4>Customer support operator</h4>
-            <p>May 2021 - July 2021 | Ukraine</p>
+            <h4>Customer service support</h4>
+            <p>August 2021 - February 2022 | USA market</p>
             <ul>
               <li class="tech-skills-item">
                 <span class="text">
-                  Making phone calls to customers and couriers in order to
-                  ensure the fastest and highest quality parcel delivery
-                  service</span
+                  Helping customers with booking services via phone calls</span
                 >
               </li>
               <li class="tech-skills-item">
                 <span class="text"> Answering all client's questions</span>
               </li>
               <li class="tech-skills-item">
-                <span class="text"> Preparing reports on the work done</span>
+                <span class="text"> Prepearing reports on the work done</span>
               </li>
             </ul>
           </div>
@@ -116,20 +113,28 @@
                   phychological support</span
                 >
               </li>
+              <li class="tech-skills-item">
+                <span class="text"> Humanitarian aid, donations</span>
+              </li>
             </ul>
           </div>
           <!--Education-->
-          <div class="my-education">
-            <h3 class="main-content-title">Education</h3>
-            <h4 class="tech-skills-item">Sumy National agrarian university</h4>
-            <h5>Biotechnology and bioengeneering</h5>
-            <p>September 2020 - June 2024 | Ukraine</p>
+          <div class="my-additional-skills">
+            <h3 class="main-content-title">Additional skills</h3>
+            <ul>
+              <li class="tech-skills-item">
+                <span class="text"> Photoshop, Canva, Figma, Lightroom</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="text">Good English speaking skills</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
       <!--Sidebar section-->
       <aside class="sidebar-section">
-        <img width="370" src="фоттто.jpeg" alt="my photo" />
+        <img width="370" src="photo.jpeg" alt="my photo" />
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
