update profession section

--- a/1resume/index.html
+++ b/1resume/index.html
@@ -14,7 +14,7 @@
       <div class="main-content-section">
         <!--About me section-->
         <div class="about-me-section">
-          <h2 class="about-me-profession">Front-End Developer</h2>
+          <h2 class="about-me-profession">React Front-End Developer</h2>
           <h1 class="about-me-name">Kseniia Pidopryhora</h1>
           <p class="about-me-description">
             Value team work. I'm always into learning new things and getting new
