--- a/1resume/index.html
+++ b/1resume/index.html
@@ -17,9 +17,10 @@
           <h2 class="about-me-profession">React Front-End Developer</h2>
           <h1 class="about-me-name">Kseniia Pidopryhora</h1>
           <p class="about-me-description">
-            Value team work. I'm always into learning new things and getting new
-            experience. Looking for further professional growth on challenging
-            products.
+            Passionate Front End Developer with almost a year of experience in
+            building and maintaining responsive websites. Proficient in HTML,
+            CSS, JavaScript, modern libraries, and frameworks. Looking for
+            further professional growth on challenging products.
           </p>
         </div>
         <!--My projects section-->
@@ -31,26 +32,48 @@
                 <a href="https://ksalpern.github.io/Relvise/index.html"
                   >Relvise responsive layout</a
                 >
-                <span>...........</span>
+                <span>.........</span>
                 <span class="project-list-item">[ HTML, CSS ]</span>
               </span>
             </li>
             <li class="project-item">
               <span>
-                <a href="https://github.com/ksalpern/search-clone"
+                <a href="https://tubular-salamander-c72897.netlify.app/"
                   >Google clone app</a
                 >
-                <span>................</span>
+                <span>.....................</span>
                 <span class="project-list-item">[ React, Context API ]</span>
               </span>
             </li>
             <li class="project-item">
               <span>
-                <a href="https://github.com/ksalpern/e-commerce-test-task"
+                <a href="https://azalex020204.github.io/AutoTK/"
                   >Front-End for E-Commerce</a
                 >
                 <span>......</span>
-                <span class="project-list-item">[ React.js, Redux ]</span>
+                <span class="project-list-item"
+                  >[ HTML, SCSS, JS, jQuery, slick ]</span
+                >
+              </span>
+            </li>
+            <li class="project-item">
+              <span>
+                <a href="https://melodious-strudel-4cdc9c.netlify.app/"
+                  >Spotify clone app</a
+                >
+                <span>.....................</span>
+                <span class="project-list-item">[ HTML, CSS ]</span>
+              </span>
+            </li>
+            <li class="project-item">
+              <span>
+                <a href="https://airbnb-clone-app.vercel.app/"
+                  >Airbnb clone app</a
+                >
+                <span>.....................</span>
+                <span class="project-list-item"
+                  >[ Next.js, tailwindcss, vercel ]</span
+                >
               </span>
             </li>
           </ol>
@@ -159,22 +182,22 @@
               <span class="tech-skills-item-text">HTML5</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">CSS3, SCSS</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">GIT</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">React.js</span>
+              <span class="tech-skills-item-text">CSS3, SCSS, Sass</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
+              <span class="tech-skills-item-text">GIT, GitHub</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">React.js, Next.js</span>
+            </li>
+            <li class="tech-skills-item">
               <span class="tech-skills-item-text">Redux</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Bootstrap</span>
+              <span class="tech-skills-item-text">Bootstrap, tailwindcss</span>
             </li>
           </ul>
         </div>
