update link to project

--- a/1resume/index.html
+++ b/1resume/index.html
@@ -38,7 +38,7 @@
             </li>
             <li class="project-item">
               <span>
-                <a href="https://tubular-salamander-c72897.netlify.app/"
+                <a href="https://golden-maamoul-56ee7d.netlify.app/"
                   >Google clone app</a
                 >
                 <span>.....................</span>
