--- a/1resume/index.html
+++ b/1resume/index.html
@@ -29,6 +29,17 @@
           <ol class="projects-list">
             <li class="project-item">
               <span>
+                <a href="https://netflix-clone-app-c2822.web.app/"
+                  >Netflix clone app</a
+                >
+                <span>.........................</span>
+                <span class="project-list-item"
+                  >[ React.js, Redux, Firebase ]</span
+                >
+              </span>
+            </li>
+            <li class="project-item">
+              <span>
                 <a href="https://ksalpern.github.io/Relvise/index.html"
                   >Relvise responsive layout</a
                 >
