--- a/1resume/index.html
+++ b/1resume/index.html
@@ -29,6 +29,17 @@
           <ol class="projects-list">
             <li class="project-item">
               <span>
+                <a href="https://ecommerce-stripe-ksalpern.vercel.app/"
+                  >Digital Cameras</a
+                >
+                <span>.........................</span>
+                <span class="project-list-item"
+                  >[ Next.js, Stripe, Sanity CMS ]</span
+                >
+              </span>
+            </li>
+            <li class="project-item">
+              <span>
                 <a href="https://ksalpern.github.io/Relvise/index.html"
                   >Relvise responsive layout</a
                 >
@@ -58,11 +69,13 @@
             </li>
             <li class="project-item">
               <span>
-                <a href="https://melodious-strudel-4cdc9c.netlify.app/"
-                  >Spotify clone app</a
+                <a href="https://sanity-medium-clone-app-ksalpern.vercel.app/"
+                  >Medium clone app</a
                 >
                 <span>.....................</span>
-                <span class="project-list-item">[ HTML, CSS ]</span>
+                <span class="project-list-item"
+                  >[ TypeScript, Next.js, Sanity CMS ]</span
+                >
               </span>
             </li>
             <li class="project-item">
