--- a/1resume/index.html
+++ b/1resume/index.html
@@ -29,6 +29,17 @@
           <ol class="projects-list">
             <li class="project-item">
               <span>
+                <a href="https://ecommerce-stripe-ksalpern.vercel.app/"
+                  >Digital Cameras</a
+                >
+                <span>........................</span>
+                <span class="project-list-item"
+                  >[ Next.js, Stripe, Sanity CMS ]</span
+                >
+              </span>
+            </li>
+            <li class="project-item">
+              <span>
                 <a href="https://ksalpern.github.io/Relvise/index.html"
                   >Relvise responsive layout</a
                 >
@@ -61,20 +72,9 @@
                 <a href="https://sanity-medium-clone-app-ksalpern.vercel.app/"
                   >Medium clone app</a
                 >
-                <span>.....................</span>
+                <span>....................</span>
                 <span class="project-list-item"
                   >[ TypeScript, Next.js, Sanity CMS ]</span
-                >
-              </span>
-            </li>
-            <li class="project-item">
-              <span>
-                <a href="https://airbnb-clone-app.vercel.app/"
-                  >Airbnb clone app</a
-                >
-                <span>.....................</span>
-                <span class="project-list-item"
-                  >[ Next.js, tailwindcss, vercel ]</span
                 >
               </span>
             </li>
