--- a/1resume/index.html
+++ b/1resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume</title>
+    <title>cv</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -85,12 +85,12 @@
           <h3 class="main-content-title">Work experience</h3>
           <!--company 3-->
           <div>
-            <h4>Freelance</h4>
-            <p>February 2022 - up to now | Remote</p>
+            <h4>Upwork</h4>
+            <p>September 2021 - up to now | Remote</p>
             <ul>
               <li class="tech-skills-item">
                 <span class="text">
-                  Making fully responsive layout with HTML&SCSS and React</span
+                  Making fully responsive layout with HTML&SCSS, React, Next.js, TypeScript</span
                 >
               </li>
               <li class="tech-skills-item">
@@ -104,7 +104,7 @@
           <!--company 2-->
           <div>
             <h4>Customer service support</h4>
-            <p>August 2021 - February 2022 | USA market</p>
+            <p>January 2021 - August 2021 | USA market</p>
             <ul>
               <li class="tech-skills-item">
                 <span class="text">
@@ -159,7 +159,7 @@
       </div>
       <!--Sidebar section-->
       <aside class="sidebar-section">
-        <img width="370" src="photo.jpeg" alt="my photo" />
+        <img width="370" src="profilepic.jpg" alt="my photo" />
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
@@ -187,7 +187,7 @@
               <span class="tech-skills-item-text">CSS3, SCSS, Sass</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">JavaScript</span>
+              <span class="tech-skills-item-text">JavaScript, TypeScript</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">GIT, GitHub</span>
@@ -199,7 +199,7 @@
               <span class="tech-skills-item-text">Redux</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Bootstrap, tailwindcss</span>
+              <span class="tech-skills-item-text">Bootstrap, tailwindcss, Material UI</span>
             </li>
           </ul>
         </div>
