--- a/1resume/index.html
+++ b/1resume/index.html
@@ -97,7 +97,7 @@
                 <span class="text"> Learning new things to do better job</span>
               </li>
               <li class="tech-skills-item">
-                <span class="text"> Prepearing reports on the work done</span>
+                <span class="text"> Preparing reports on the work done</span>
               </li>
             </ul>
           </div>
@@ -115,7 +115,7 @@
                 <span class="text"> Answering all client's questions</span>
               </li>
               <li class="tech-skills-item">
-                <span class="text"> Prepearing reports on the work done</span>
+                <span class="text"> Preparing reports on the work done</span>
               </li>
             </ul>
           </div>
